# counting_words3

./: CMakeLists.txt  main.cpp
include/: config_parser.h  operations_with_files.h  operations_with_text.h  safeQueue.h  states_conveyor.h
src/: config_parser.cpp  operations_with_files.cpp  operations_with_text.cpp  states_conveyor.cpp
